SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule__c/CPQ_Playbook_Rule__c.object-meta.xml
<CustomObject>
    <description>Rules governing customization logic of CPQ Playbooks</description>
    <label>CPQ Playbook Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>