SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule__c/fields/CPQ_Playbook__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook__c</fullName>
    <description>Playbook in which this rule is enforced</description>
    <inlineHelpText>Playbook in which this rule is enforced</inlineHelpText>
    <label>CPQ Playbook</label>
    <referenceTo>CPQ_Playbook__c</referenceTo>
    <relationshipLabel>CPQ Playbook Rules</relationshipLabel>
    <relationshipName>CPQ_Playbook_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>