SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description></description>
    <inlineHelpText></inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>