SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule__c/fields/Evaluate_When__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_When__c</fullName>
    <description>Determines the criteria for when the rule should be fired</description>
    <inlineHelpText>Determines the criteria for when the rule should be executed</inlineHelpText>
    <label>Execute When</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation change</fullName>
            </value>
            <value>
                <fullName>When TRUE with evaluation change</fullName>
            </value>
            <value>
                <fullName>When FALSE with evaluation change</fullName>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Always when TRUE</fullName>
            </value>
            <value>
                <fullName>Always when FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>